--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,22 @@
-pyodbc
-pytest
-pandas
-numpy
-cryptography
+atomicwrites==1.4.0
+attrs==20.3.0
+cffi==1.14.4
+colorama==0.4.4
+cryptography==3.3.1
+DateTime==4.3
+iniconfig==1.1.1
+numpy==1.19.5
+packaging==20.8
+pandas==1.2.0
+pluggy==0.13.1
+py==1.10.0
+pycparser==2.20
+pyodbc==4.0.30
+pyparsing==2.4.7
+pytest==6.2.1
+python-dateutil==2.8.1
+pytz==2020.5
+six==1.15.0
+tabulate==0.8.7
+toml==0.10.2
+zope.interface==5.2.0
